<resources>
    <string name="app_name">Quiz</string>
    <string name="name">Name</string>
    <string name="pleaseEn">Please enter name here.</string>
    <string name="welcome">Welcome</string>
    <string name="country">Country Flag Quiz</string>
    <string name="start_btn">Start</string>
    <string name="question_tv">What country does this flag belong to?</string>
    <string name="submit_btn">Submit</string>
    <string name="description">A flag.</string>
    <string name="result">Result</string>
    <string name ="result_image"></string>
    <string name="good_result_message"></string>
    <string name="result_score"></string>
    <string name ="try_again_btn">Try again</string>
    <string name="finish">Finish</string>
    <string name ="go_to">Go to next Question</string>
</resources>