<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/ic_bg">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/country"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>



    <com.google.android.material.card.MaterialCardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="@string/welcome"
                android:textSize="34sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/pleaseEn"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:imeOptions="actionGo"
                    android:inputType="textCapWords"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_btn"
                    android:textSize="16sp"
                    android:backgroundTint="@color/tcu_purple"
                    app:cornerRadius="0dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>